# taichi

./: FLAGOS_CHANGES.md  FLAGOS_INTEGRATION_SUMMARY.md  FLAGOS_INTEGRATION_UPDATE.md
cmake/: TaichiCore.cmake
docs/: flagos_integration_design.md
examples/flagos/: README.md  fractal_flagos.py  matmul_flagos.py
taichi/codegen/flagos/: CMakeLists.txt  codegen_flagos.cpp  codegen_flagos.h
taichi/inc/: archs.inc.h
taichi/program/: compile_config.h  program.cpp
taichi/python/: export_lang.cpp
taichi/rhi/: CMakeLists.txt  arch.cpp
taichi/rhi/flagos/: CMakeLists.txt  flagos_device.cpp  flagos_device.h
taichi/runtime/program_impls/flagos/: CMakeLists.txt  flagos_kernel_compiler.cpp  flagos_kernel_compiler.h  flagos_kernel_launcher.cpp  flagos_kernel_launcher.h  flagos_program.cpp  flagos_program.h
